# SIMO

./: .gitignore  .project  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  doc_config  readme.md
SIM7000/: device.c  device.h  main.c  program  sim_device.c  sim_device.h
core/include/: config.h
core/include/comm/: comm.h  interface.h
core/include/debug/: debug_port.h
core/include/device/: SIM_device.h
core/include/simo/: PCF8674.h  config.h  core.h  debug_interface.h  device.h  i2c.h  lcd.h  request_command.h  sim_device.h  simo_utils.h  spi.h  uart.h
core/include/simo/AT45DB041E/: memory.h  readme.md
core/include/simo/SIM/: communication.h  device.h  sim_device.h
core/include/simo/bluetooth/: bluetooth.h
core/include/simo/comm/: comm.h
core/include/simo/memory/: AT45DB041E.h  _AT45DB041E.h  memory.h  memory_map.txt  memory_store.h  readme.md
core/include/simo/timer/: timer.h
core/include/simo/uart/: uart.h
core/include/simo/wdt/: wdt.h
core/include/utils/: utils.h
core/src/: comm.c  communication.c  main.c  sim_device.c  timer.c  uart.c  wdt.c
core/src/simo/: AT45DB041E.c  _AT45DB041E.c  bluetooth.c  debug_interface.c  device.c  i2c.c  lcd.c  memory.c  memory_store.c  sim_device.c  spi.c  uart.c
core/src/simo/SIM7000/: sim_device.c
core/src/simo_v2/: main.c
core/src/simo_v2/comm/: comm.c  interface.c
include/simo/: core.h
include/simo/uart/: uart.h
pico-sdk/: Makefile  cmake_install.cmake
pico-sdk/docs/: Makefile  cmake_install.cmake
pico-sdk/src/: Makefile  cmake_install.cmake
pico-sdk/src/common/: Makefile  cmake_install.cmake
pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
pico-sdk/tools/: Makefile  cmake_install.cmake
src/: main.c  uart.c
(+126 files in other folders)
